# psleigh

./: README.md  hatch_build.py  pyproject.toml
.github/workflows/: publish.yml
sleigh/: Makefile  README.md  bindings.cpp  compile_slaspecs.py
sleigh/src/: ruleparse.cc  ruleparse.hh
src/psleigh/: .gitignore  __init__.py
src/pysleigh/: __init__.py  __main__.py
tests/: test_main.py
