[project]
name = "psleigh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Roee Shoshani", email = "roysho10@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pybind11>=3.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/psleigh"]

[[tool.hatch.build.hooks.build-scripts.scripts]]
work_dir = "."
commands = ["make -C sleigh -j$(nproc) && cp -r sleigh/build/dist/* src/psleigh/"]
artifacts = []

[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.cibuildwheel.linux]
before-all = "yum install -y make gcc-c++"
archs = ["auto64"]
