[project]
name = "psleigh"
version = "0.2.0"
description = "python bindings for ghidra's sleigh engine"
readme = "README.md"
authors = [
    { name = "Roee Shoshani", email = "roysho10@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pybind11>=3.0.1",
]
license = "MIT"

[project.urls]
Repository = "https://github.com/roeeshoshani/psleigh.git"

[tool.hatch.build.targets.wheel]
packages = ["src/psleigh"]

[[tool.hatch.build.hooks.build-scripts.scripts]]
work_dir = "."
commands = ["make -C sleigh -j$(nproc) && cp -r sleigh/build/dist/* src/psleigh/"]
artifacts = []

[build-system]
requires = [
    "hatchling",
    "hatch-build-scripts",
    "pybind11>=3.0.1",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pybind11>=3.0.1",
]

[tool.cibuildwheel.linux]
archs = ["auto64"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
